# fmtex

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: consume.rs  consumed.rs  display.rs  ext.rs  iter.rs  joined.rs  lib.rs  repeated.rs
